[CCAP-976] - Update children preparer and add tests for multi provider field preparer.